FIX: change main link color for adequate contrast w/ white under AA

--- a/_sass/partials/_base.scss
+++ b/_sass/partials/_base.scss
@@ -27,9 +27,9 @@ $h5-font-size: 2.3 * $base-font-size;
 $h6-font-size: 1.875 * $base-font-size;
 
 // Colors
-$main-color: #03a9f4;
+$main-color: #007db7; // #;
 $link-color: $main-color;
-$link-lighten-amount: 20%;
+$link-lighten-amount: 15%;
 $base-background-color: #fff;
 $base-section-background-color: $link-color;
 $primary-color: #4285f4;
